[package]
name = "rs-cc-matching-engine"
version = "1.0.0-beta.0"
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>"]
edition = "2018"
publish = false

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[dependencies]
chrono  = "0.4.10"
uuid = { version = "0.8.1", features = ["v4"] }
